--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+      # Envs
+    env:
+      RELEASE_VERSION: $(git rev-parse --short "$GITHUB_SHA")
+      DOCKER_USER: gpoleze
+      IMAGE_REPO: speedtest
     steps:
       # Setup
       - name: checkout code
@@ -16,20 +21,21 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      # Envs
-      - name: Set RELEASE_VERSION env
-        run: echo "RELEASE_VERSION=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
-      - name: Set IMAGE_REPO env
-        run: echo "IMAGE_REPO=speedtest" >> $GITHUB_ENV
-      - name: Set DOCKER_USER env
-        run: echo "DOCKER_USER=gpoleze" >> $GITHUB_ENV
+
       # Actions
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - name: build the arm64 image
-        run: |
-          docker buildx build --push \
-            --tag ${DOCKER_USER}/${IMAGE_REPO}:arm64v8-latest \
-            --tag ${DOCKER_USER}/${IMAGE_REPO}:arm64v8-$RELEASE_VERSION \
-            --platform linux/arm64, linux/amd64 \
-            .
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_USERNAME }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${DOCKER_USER}/${IMAGE_REPO}:latest,${DOCKER_USER}/${IMAGE_REPO}:$RELEASE_VERSION
+          platforms: linux/amd64,linux/arm64
+
