--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,20 +14,20 @@ jobs:
       DOCKER_USER: gpoleze
       IMAGE_REPO: speedtest
     steps:
-      # Setup
+      # Checkout repo
       - name: checkout code
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
 
-      # Actions
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
           password: ${{ secrets.DOCKER_HUB_USERNAME }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
 
       - name: Build and push
         id: docker_build
