--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          password: ${{ secrets.DOCKER_HUB_USERNAME }}
+          username: ${secrets.DOCKER_HUB_ACCESS_TOKEN}
+          password: ${secrets.DOCKER_HUB_USERNAME}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
