--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
       # Envs
     env:
-      RELEASE_VERSION: $(git rev-parse --short "$GITHUB_SHA")
+      RELEASE_VERSION: ${{ git rev-parse --short "$GITHUB_SHA" }}
       DOCKER_USER: gpoleze
       IMAGE_REPO: speedtest
     steps:
@@ -21,13 +21,13 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${secrets.DOCKER_HUB_ACCESS_TOKEN}
-          password: ${secrets.DOCKER_HUB_USERNAME}
+          username: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          password: ${{ secrets.DOCKER_HUB_USERNAME }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
       - name: Build and push
         id: docker_build
