--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
       RELEASE_VERSION: ${{ git rev-parse --short "$GITHUB_SHA" }}
       DOCKER_USER: gpoleze
       IMAGE_REPO: speedtest
+      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
     steps:
       # Checkout repo
       - name: checkout code
@@ -21,8 +23,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          password: ${{ secrets.DOCKER_HUB_USERNAME }}
+          username: ${{ DOCKER_HUB_ACCESS_TOKEN }}
+          password: ${{ DOCKER_HUB_USERNAME }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
