--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
       RELEASE_VERSION: ${GITHUB_SHA::8}
       DOCKER_USER: gpoleze
       IMAGE_REPO: speedtest
-      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_ACCESS_TOKEN: ${secrets.DOCKER_HUB_ACCESS_TOKEN}
+      DOCKER_HUB_USERNAME: ${secrets.DOCKER_HUB_USERNAME}
     steps:
       # Checkout repo
       - name: checkout code
