--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ DOCKER_HUB_ACCESS_TOKEN }}
-          password: ${{ DOCKER_HUB_USERNAME }}
+          username: ${DOCKER_HUB_ACCESS_TOKEN}
+          password: ${DOCKER_HUB_USERNAME}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
