--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
       # Envs
     env:
-      RELEASE_VERSION: ${{ $GITHUB_SHA::8 }}
+      RELEASE_VERSION: ${{ GITHUB_SHA::8 }}
       DOCKER_USER: gpoleze
       IMAGE_REPO: speedtest
     steps:
