--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,15 @@ jobs:
     runs-on: ubuntu-latest
       # Envs
     env:
-      RELEASE_VERSION: ${{ GITHUB_SHA::8 }}
       DOCKER_USER: gpoleze
       IMAGE_REPO: speedtest
     steps:
       # Checkout repo
       - name: checkout code
         uses: actions/checkout@v2
+
+      - name: define RELEASE_VERSION env variable
+        run: echo "RELEASE_VERSION=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
