--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,8 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ env.DOCKER_USER }}/${{ env.IMAGE_REPO }}:latest,${{ env.DOCKER_USER }}/${{ env.IMAGE_REPO }}:${{ env.RELEASE_VERSION }}
+          tags: |
+            ${{ env.DOCKER_USER }}/${{ env.IMAGE_REPO }}:latest,
+            ${{ env.DOCKER_USER }}/${{ env.IMAGE_REPO }}:${{ env.RELEASE_VERSION }}
           platforms: linux/amd64,linux/arm64
 
